[gd_scene load_steps=4 format=3 uid="uid://do8nu166getvr"]

[ext_resource type="Theme" uid="uid://bwayc6rbhtvxj" path="res://assets/ui/theme/HEALTH_theme.tres" id="1_38p7m"]
[ext_resource type="Script" path="res://ui/pause_menu.gd" id="1_r8wdo"]
[ext_resource type="PackedScene" uid="uid://t6pr3p1c7edy" path="res://ui/options_menu.tscn" id="2_p7c3u"]

[node name="menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_38p7m")
script = ExtResource("1_r8wdo")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -152.0
offset_top = 10.0
offset_bottom = 126.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="options_button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Options"

[node name="music_select_button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Music"

[node name="track_select_panel" type="Panel" parent="MarginContainer/VBoxContainer/music_select_button"]
unique_name_in_owner = true
layout_mode = 0
offset_left = -326.0
offset_top = -6.0
offset_right = -18.0
offset_bottom = 71.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/music_select_button/track_select_panel"]
layout_mode = 0
offset_right = 307.0
offset_bottom = 72.0

[node name="track_select_label" type="Label" parent="MarginContainer/VBoxContainer/music_select_button/track_select_panel/VBoxContainer"]
layout_mode = 2
text = "Select Track"

[node name="track_select_button" type="OptionButton" parent="MarginContainer/VBoxContainer/music_select_button/track_select_panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="main_menu_button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Main Menu"

[node name="options_menu" parent="." instance=ExtResource("2_p7c3u")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -462.0
offset_top = 8.0
offset_right = -175.0
offset_bottom = 413.0
grow_horizontal = 0
grow_vertical = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/options_button" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/music_select_button" to="." method="_on_music_select_button_pressed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/music_select_button/track_select_panel/VBoxContainer/track_select_button" to="." method="_on_track_select_button_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/main_menu_button" to="." method="_on_main_menu_pressed"]
[connection signal="hidden" from="options_menu" to="." method="_on_options_menu_hidden"]
